force-app/main/default/objects/ssot__WebStore__dlm/fields/ssot__CheckoutValidAfterDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__CheckoutValidAfterDate__c</fullName>
    <label>Checkout Valid After Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CheckoutValidAfterDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>