force-app/main/default/objects/ssot__WebStore__dlm/fields/ssot__GuestCartTimeToLiveMinutesQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__GuestCartTimeToLiveMinutesQuantity__c</fullName>
    <label>Guest Cart Time To Live Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GuestCartTimeToLiveMinutesQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>