force-app/main/default/objects/ssot__WebStore__dlm/fields/ssot__rel_1697761220576_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761220576_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WebStore_ShipFromAddressId_map_Addre_rel</label>
    <referenceTo>ssot__Address__dlm</referenceTo>
    <relationshipLabel>WebStore_ShipFromAddressId_map_Addre_rel</relationshipLabel>
    <relationshipName>rel_1697761220576_end</relationshipName>
    <type>Lookup</type>
</CustomField>