force-app/main/default/objects/ssot__WebStore__dlm/fields/ssot__SalesStoreType__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesStoreType__c</fullName>
    <label>Sales Store Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesStoreType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>