force-app/main/default/objects/ssot__WebStore__dlm/fields/ssot__SupportedCurrenciesText__c.field-meta.xml
<CustomField>
    <fullName>ssot__SupportedCurrenciesText__c</fullName>
    <label>Supported Currencies</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SupportedCurrenciesText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>