force-app/main/default/objects/ssot__WebStore__dlm/fields/ssot__WebStoreType__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebStoreType__c</fullName>
    <label>Web Store Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebStoreType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>